More barebones html. Learning how branches work

--- a/index.html
+++ b/index.html
@@ -9,3 +9,19 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
+
+<header>
+    <nav>
+        <a>Github Project Link</a>
+    </nav>
+
+</header>
+
+<body>
+
+    <section class="card" id="wikipedia"> </section>
+    
+    <section class="card" id="misc"> </section>
+
+    <section class="card" id="youtube"> </section>
+</body>
