--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./assets/js/script.js"></script>
 </head>
 
 <header>
@@ -35,24 +34,32 @@
     <main>
         <section class="card" id="wikipedia">
             <p>This is a Wikipedia title, probably!</p>
-            <img src=".\assets\Wikipedia-logo-v2.svg.png" alt="Wikipedia Logo">
+            <iframe id="wikiEmbed"
+                title="Embedded wikipedia"
+                width="480"
+                height="400"
+                src="">
+            </iframe>
             <!-- Not even sure this <a> element is necessary. I suspect it isn't -->
             <a href="" id="wikipediaLink">This could be a Wikipedia link</a>
         </section>
         
         <section class="card" id="misc">
             <ul>
-                <li>A button or some info</li>
-                <li>Some more info here, this one is quite long just to show how the text wraps. Isn't technology incredible?</li>
-                <li>Another list item, just to help show how far apart these items are spaced. I will throw them into a flexbox column, I think</li>
+                <li id="title">A button or some info</li>
+                <li id="length">This element will compare the lengths of our 2 searches</li>
+                <li id="popularity">This element will compare relative popularity of our 2 searches. Total Youtube views and monthly Wikipedia hits (https://wikitech.wikimedia.org/wiki/Analytics/AQS/Pageviews)</li>
             </ul>
             </section>
 
         <section class="card" id="youtube">
             <p>This is a Youtube title, probably!</p>
-            <img src="./assets\hd-youtube-logo-png-transparent-background-20.png" alt="Youtube Logo">
-            <!-- Not even sure this <a> element is necessary. I suspect it isn't -->
-            <a href="" id="youtubeLink">This could be a Youtube link</a> 
-        </section>
+            <div id ='youtubePlayer'></div>
+            <p id="youtubeDetails">The video is this long and has been viewed this many times</p>
+            </section>
     </main>
+
+<script src="./assets/js/script.js"></script>
+<script src="./assets/js/youtube.js"></script>
+<script src="./assets/js/wiki.js"></script>
 </body>
